<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Earthquakes</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_fragmento_lista">FragmentoLista</string>
    <string name="title_activity_preferences">PreferencesActivity</string>
    <string name="action_preferences">Preferencias</string>
    <string name="action_refresh">Refrescar</string>
    <string name="refresh">Autorefresh:</string>
    <string name="intervalo">Intervalo:</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="valorPorDefecto">Default</string>
    <string name="magnitud">Magnitud</string>
    <string name="PREF_CHECK_BOX">PREF_CHECK_BOX</string>
    <string name="PREF_LIST_INTERVALOS">PREF_LIST_INTERVALOS</string>
    <string name="PREF_LIST_MAGNITUDES">PREF_LIST_MAGNITUDES</string>
    <string name="keyCheckbox">keyCheckbox</string>
    <string name="keyListaIntervalos">keyListaIntervalos</string>
    <string name="keyListaMagnitudes">keyListaMagnitudes</string>
    <string name="categoriaActualizacion">Preferencias de actualización</string>
    <string name="tituloActualizaciones">Autorefresh</string>
    <string name="descripcionActualizaciones">Actualización automática</string>
    <string name="tituloIntervalos">Intervalos</string>
    <string name="descripcionIntervalos">Lista de diferentes intervalos</string>
    <string name="categoriaMagnitudes">Preferencias de magnitud</string>
    <string name="tituloMagnitudes">Magnitudes</string>
    <string name="descripcionMagnitudes">Lista de diferentes magnitudes</string>
    <string name="categoriaConectividad">Preferencias de conectividad</string>
    <string name="tituloConectividad">Opciones de conectividad</string>
    <string name="descripcionConectividad">Todas las opciones de conectividad</string>
    <string name="title_activity_detalle">DetalleActivity</string>
    <string name="region">Region</string>
    <string name="hora">Hora</string>
    <string name="detalle">></string>
    <string name="labelLugar">Lugar</string>
    <string name="labelMomento">Hora concreta</string>
    <string name="labelGrados">Magnitud</string>
    <string name="action">com.jon.alarmaRefrescarTerremotos</string>

    <string-array name="intervalos_array_valores">
        <item>1</item>
        <item>60</item>
        <item>900</item>
        <item>1800</item>
        <item>3600</item>
    </string-array>
    <string-array name="intervalos_array">
        <item>1 seg</item>
        <item>1 min</item>
        <item>15 min</item>
        <item>30 min</item>
        <item>60 min</item>
    </string-array>

    <integer-array name="magnitudes_array_valores">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </integer-array>

    <string-array name="magnitudes_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>

</resources>
